welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
    nombre=nombre+1
          ^countTeen:12: error: type mismatch;
 found   : Unit
 required: Int
  if(d>12 && d<20){
  ^